Update profile photo URL in index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </header>
 
   <section class="hero">
-    <img src="https://via.placeholder.com/160" alt="Profile photo" />
+    <img src="https://fy-prod-bucket.s3.me-central-1.amazonaws.com/170749/0d5b1c4c7f720f698946.jpg" alt="Profile photo" />
     <h1>Hi, I’m <span style="color: var(--accent)">Fady Wadea</span> — a Business Intelligence & Data Analyst</h1>
     <p>I transform data into actionable insights using Power BI, SQL, and Python — crafting dashboards and analytical solutions that drive measurable growth and efficiency.</p>
     <a href="#projects" class="btn-primary">View My Work</a>
